--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 
 Figure Exporter is a simple interface that helps you for formatting and exporting your plots in a simple way. 
 
-[[./screenshot
+[[./screenshot.png
 ]]
 * Usage
 First you need to download and install the GUI Layout Toolbox at https://www.mathworks.com/matlabcentral/fileexchange/27758-gui-layout-toolbox
