--- a/README.org
+++ b/README.org
@@ -9,25 +9,14 @@ Figure Exporter is a simple interface that helps you formatting and exporting yo
 * Usage
 First you need to download and install the GUI Layout Toolbox at https://www.mathworks.com/matlabcentral/fileexchange/27758-gui-layout-toolbox
 
-Then you can execute the /testme.m/ file in Matlab to test the application.
+Then you can execute the [[https://raw.githubusercontent.com/KirmTwinty/figureExporter/master/testme.m][/testme/]] file in Matlab to test the application. As you can see in this file, the tool only requires the handle to the axes you want to export as input. 
 
+Basically, you can run the tool with the following command to export the current axes image.
 #+BEGIN_SRC: matlab
-close all;
-clear all;
-clc;
-addpath(); % Path to the layout toolbox
-
-[X,Y] = meshgrid(-8:.5:8);
-R = sqrt(X.^2 + Y.^2) + eps;
-Z = sin(R)./R;
-
-hFig = figure;
-mesh(Z);
-hAxes = gca;
-FigExporter(hAxes);
+FigExporter(gca);
 #+END_SRC: matlab
 
-As you can see in the /testme.m/ file, the tool only requires the handle to the axes you want to export as input. 
+
 
 
 
