--- a/README.org
+++ b/README.org
@@ -9,9 +9,9 @@ Figure Exporter is a simple interface that helps you formatting and exporting yo
 * Usage
 First you need to download and install the GUI Layout Toolbox at https://www.mathworks.com/matlabcentral/fileexchange/27758-gui-layout-toolbox
 
-Then you can execute the [[https://raw.githubusercontent.com/KirmTwinty/figureExporter/master/testme.m][/testme/]] file in Matlab to test the application. As you can see in this file, the tool only requires the handle to the axes you want to export as input. 
+Then you can execute the [[https://raw.githubusercontent.com/KirmTwinty/figureExporter/master/testme.m][testme.m]] file in Matlab to test the application. As you can see in this file, the tool only requires the handle to the axes you want to export as input. 
 
-Basically, you can run the tool with the following command to export the current axes image.
+Basically, you can run the tool with the following command to export the current axes image: 
 #+BEGIN_SRC: matlab
 FigExporter(gca);
 #+END_SRC: matlab
